[workspace]
resolver = "2"
members = [
    "aiva-cli",
    "aiva-core",
    "aiva-platform",
    "aiva-network",
    "aiva-storage",
    "aiva-security",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["AIVA Development Team"]
license = "MIT"
repository = "https://github.com/aiva/aiva"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
bytes = "1.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
